--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <link href="styles/main.css" rel="stylesheet">
 </head>
 <body>
-    <div id="root"></div>
+    <div id="root">
+hello World</div>
     <script type="text/babel" src="components/Header.js"></script>
     <script type="text/babel" src="components/About.js"></script>
     <script type="text/babel" src="components/Experience.js"></script>
